; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/example/extr_memcache.c_check_error.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/example/extr_memcache.c_check_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@YRMCDS_SYSTEM_ERROR = common dso_local global i64 0, align 8
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"system error\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"yrmcds error: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_error(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %19

5:                                                ; preds = %1
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @YRMCDS_SYSTEM_ERROR, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i32, i32* @errno, align 4
  %11 = call i32 @error(i32 0, i32 %10, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %17

12:                                               ; preds = %5
  %13 = load i32, i32* @stderr, align 4
  %14 = load i64, i64* %2, align 8
  %15 = call i8* @yrmcds_strerror(i64 %14)
  %16 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  br label %17

17:                                               ; preds = %12, %9
  %18 = call i32 @exit(i32 2) #3
  unreachable

19:                                               ; preds = %1
  ret void
}

declare dso_local i32 @error(i32, i32, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @yrmcds_strerror(i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
